# ISS

./: .gitattributes  .gitignore  .gitmodules  DepthCamera_2023-10-26-10-32-34.json  README.md  README_DOCKER.md  demo.py  log.txt  nohup.out  obstacle.pkl  obstacle_info.pkl  reader.py  requirements.txt  requirements.yaml  requirements_conda.txt  requirements_mini.txt  run.py  run_carla.py  setup.py  setup_cuda.py  test.ipynb  test.py  test.sh  test_detection_3d.py  todo.md
ISS/: runc.cpp  runc.pyx  setup.py
ISS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Install/: INSTALL.md  requirements.txt  setup.py  setup.sh  setup.zsh  torch_scatter-2.0.7-cp38-cp38-linux_x86_64.whl
carla_bridge/: CMakeLists.txt  package.xml  setup.py
carla_bridge/launch/: carla_bridge.launch
carla_bridge/scripts/carla_agent/: basic_agent.py  behavior_agent.py
carla_bridge/scripts/carla_bridge/: carla_bridge_node.py  carla_visualizer.py  controller_bridge.py  gt_object_detector.py  gt_state_estimator.py  simulator.py
config/: actor_settings_lidar_only.json  actor_settings_onlycamera.json  sensor_config_onlycamera.json  sensor_settings_lidar_only.json  world_config_template.json
control/: CMakeLists.txt  package.xml  setup.py
doc/: conventions.md
examples/: demo_lanelet_planner.ipynb  demo_lattices_planner.ipynb  realtime_obstacle_detecting.py  roadnet_exporter.py  test.ipynb  test_control.py  test_detection_2d.ipynb  test_detection_2d.py  test_hybrid_a_star.py  test_hybrid_a_star_config.py  test_location.py  test_miscellaneous.py  test_percetion.py  test_planning.py  test_sensor_data.py  visualize_groundtruth_process.py
install/: requirements.txt
iss_msgs/: CMakeLists.txt  package.xml
maps/: transform.ipynb
planning/: CMakeLists.txt  package.xml  setup.py
prediction/: CMakeLists.txt  package.xml
ros1_ws/src/carla_bridge/: CMakeLists.txt  package.xml  setup.py
ros1_ws/src/carla_bridge/config/: carla_bridge.yaml  object_tracking.yaml
ros1_ws/src/carla_bridge/launch/: carla_bridge.launch  carla_demo.launch  leaderboard.launch  teleop_keyboard.launch
ros1_ws/src/carla_bridge/scripts/carla_agent/: carla_utils.py  controller.py  global_route_planner.py  local_planner.py
ros1_ws/src/carla_bridge/scripts/carla_bridge/: carla_bridge_node.py  carla_bridge_sensors_node.py  carla_visualizer.py  controller_bridge.py  controller_interface.py  gt_object_detector.py  gt_state_estimator.py  iss_leaderboard_agent.py  object_detector.py  object_tracker.py  route_manipulation.py  sensor_utils.py  state_estimator.py  test.ipynb  test_carla_map.ipynb
state_estimation/: CMakeLists.txt  package.xml
test/: 0000000843.npy  poses.csv
(+255 files in other folders)
